--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,16 +7,17 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <!-- site icon -->
-  <link rel="bookmark"  type="image/x-icon"  href="{{site.baseurl}}/assets/img/favicon.ico"/>
+  <link rel="bookmark" type="image/x-icon" href="{{site.baseurl}}/assets/img/favicon.ico" />
   <link rel="shortcut icon" href="{{site.baseurl}}/assets/img/favicon.ico">
 
   <!-- evil icon -->
-  <link rel="stylesheet" href="{{"/assets/evil-icons.min.css" | prepend:site.baseurl }}">
-  <script src="{{"/assets/evil-icons.min.js" | prepend:site.baseurl }}"></script>
+  <link rel="stylesheet" href="{{" /assets/evil-icons.min.css " | prepend:site.baseurl }}">
+  <script src="{{" /assets/evil-icons.min.js " | prepend:site.baseurl }}"></script>
 
   <!-- todo: include this into main.css -->
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ " /css/main.css " | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ " /feed.xml
+    " | prepend: site.baseurl | prepend: site.url }}">
 </head>
