--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,11 @@
 <header class="site-header">
 
-  <a href="https://github.com/jiangtianyu2009/jiangtianyu2009.github.io">
-    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
-      alt="Fork me on GitHub">
-  </a>
+  <div class="ribbon">
+    <a href="https://github.com/jiangtianyu2009/jiangtianyu2009.github.io">
+      <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
+        alt="Fork me on GitHub">
+    </a>
+  </div>
 
   <h2 class="logo">
     <a href="{{ site.baseurl }}/">{{ site.title }}</a>
