Add Google Analytics
Add google analytics.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,15 @@
 <header class="site-header">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116224696-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-116224696-2');
+  </script>
+
   <div class="ribbon">
     <a href="https://github.com/jiangtianyu2009/jiangtianyu2009.github.io">
       <img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
