Add Google Console
Add google console.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header class="site-header">
 
+  <meta name="google-site-verification" content="Yy-1PeZjEbyagtUasKzXd9HJaFCjeODZR3RBafLPWgM" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116224696-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'UA-116224696-2');
   </script>
 
